# hackathone-roboticsai-book

./: .gitignore  bash.exe.stackdump
.claude/: settings.local.json
specs/001-ai-study-assistant/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ai-study-assistant/checklists/: requirements.md
specs/001-ai-study-assistant/contracts/: chat-api.yaml
website/website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tailwind.config.js
website/website/backend/: .env  agent.py  embed.py  main.py  pyproject.toml
website/website/backend/app/: agent.py  main.py
website/website/docs/chapters/chapter1/: section1-digital-ai-to-physical-ai.md  section2-humanoid-form-factor.md  section3-safety-ethics.md  section4-embodied-cognition.md  section5-physical-reasoning.md  section6-benefits-challenges.md
website/website/docs/chapters/chapter10/: section1-vision-language-action-models.md  section2-llms-for-planning.md  section3-voice-control-whisper.md  section4-cognitive-architectures.md  section5-reasoning-under-uncertainty.md  section6-human-robot-interaction.md
website/website/docs/chapters/chapter11/: section1-integration.md  section2-state-machines.md  section3-error-recovery.md  section4-final-project-deployment.md  section6-future-directions.md  (+1 more)
website/website/rag_backend/: auth.py  config.py  main.py  rag.py  requirements.txt
website/website/src/components/: SidebarEnhancer.tsx
website/website/src/css/: content.css  custom.css
website/website/src/pages/: index.tsx
website/website/src/theme/: Root.tsx
(+57 files in other folders)
